fixed alignment

--- a/tab_stuff.css
+++ b/tab_stuff.css
@@ -358,16 +358,15 @@ li.active a, li.active a:hover {
 	float: right;
 }
 .backButton {
-	padding: 15px 25px;
-    display: inline-block;
-    border-radius: 5px 5px 5px 5px;
-    background: #7FB5DA;
-    font-size: 16px;
-    font-weight: 600;
-    color: #4c4c4c;
-    transition: all linear 0.15s;
+	padding:9px 15px;
+	display:inline-block;
+	border-radius	:5px 5px 5px 5px;
+	background:#7FB5DA;
+	font-size:16px;
+	font-weight:600;
+	color:#4c4c4c;
+	transition:all linear 0.15s;
 	float: right;
-	margin: 5px 30px;
 	text-decoration: none;
 }
 #back:hover {
